--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+header{
+  background-color: rgb(219, 218, 219);
+  background-size: cover;
+  height: 100vh;
+  width: 100%;
+
+}
 table {
     border-collapse: collapse;
     width: 100%;
@@ -12,3 +20,17 @@ table {
   th {
     background-color: #f2f2f2;
   }
+
+button{
+  background-color: #f2f2f2;
+  border:5px solid #f2f2f2;
+  margin:20px;
+  text-align: center;
+  border-radius: 10px;
+}
+ button:hover{
+  background-color: orange;
+  border:5px solid orange;
+  text-align: center;
+ }
+  
